Correct bugs with initial Seed test. Create helper type classes to permit custom processing and error catching for FileHelper imports.

--- a/HomeCFO_DX/Views/Home/_GridViewPartial_Activity.cshtml
+++ b/HomeCFO_DX/Views/Home/_GridViewPartial_Activity.cshtml
@@ -19,11 +19,10 @@
 
 				settings.Columns.Add("Date");
 				settings.Columns.Add("Description");
-				settings.Columns.Add("OriginalDescription");
+				settings.Columns.Add("Original_Description");
 				settings.Columns.Add("Amount");
-				settings.Columns.Add("TransactionType");
-				settings.Columns.Add("Category");
-				settings.Columns.Add("AccountName");
+				settings.Columns.Add("Transaction_Type");
+				settings.Columns.Add("Account_Name");
 			});
 }
 @grid.Bind(Model).GetHtml()
